fixed getById for products